--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" href="img/favicon.png" />
   <link rel="preload" href="img/logo-full.png" as="image" />
   <link rel="stylesheet" href="styles.css" />
+  <script defer src="drive.js"></script>
   <script defer src="app.js"></script>
 
 </head>
