--- a/browse.html
+++ b/browse.html
@@ -1,20 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Reese’s TV</title>
+  <title>Browse — Reese’s TV</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#273278" />
   <link rel="icon" href="img/favicon.png" type="image/png" />
   <link rel="apple-touch-icon" href="img/favicon.png" />
-  <link rel="preload" href="img/logo-full.png" as="image" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="drive.js"></script>
   <script defer src="app.js"></script>
-
-  <meta name="description" content="Reese’s TV — playful streaming site for Reese’s videos." />
 </head>
-<body data-page="home">
+<body data-page="browse">
   <header class="topbar">
     <div class="brand">
       <img src="img/favicon.png" alt="Reese's TV logo" class="brand-icon" />
@@ -30,29 +27,15 @@
       <a href="about.html" class="nav-link">About</a>
     </nav>
   </header>
-
   <main class="container">
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Welcome to Reese’s TV</h1>
-        <p>Your playful home for videos, series, and shorts.</p>
-        <a class="btn primary" href="#latest">Watch Latest</a>
-      </div>
-    </section>
-
-    <section id="latest" class="section">
-      <h2>Latest</h2>
-      <div id="latest-grid" class="video-grid" aria-live="polite"></div>
-    </section>
-
+    <div id="crumbs" class="crumbs"></div>
     <section class="section">
-      <h2>All Videos</h2>
-      <div id="all-grid" class="video-grid"></div>
+      <div id="folders" class="logo-grid"></div>
+      <div id="videos" class="video-grid"></div>
     </section>
   </main>
   <footer class="site-footer">
-    <p>© <span id="year"></span> Reese’s TV — Built with ❤️ and GitHub Pages.</p>
+    <p>© <span id="year"></span> Reese’s TV.</p>
   </footer>
-
 </body>
 </html>
