--- a/library.html
+++ b/library.html
@@ -24,6 +24,7 @@
     </div>
     <nav class="nav">
       <a href="./" class="nav-link">Home</a>
+      <a href="browse.html" class="nav-link">Browse</a>
       <a href="library.html" class="nav-link">Library</a>
       <a href="about.html" class="nav-link">About</a>
     </nav>
