--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
       </div>
     </section>
 
+    <section class="section banner" id="top-picks"></section>
+
+    <section id="channels" class="section">
+      <h2><span class="dot"></span> Channels</h2>
+      <div id="channel-buttons" class="channels" aria-live="polite"></div>
+    </section>
+
     <section id="latest" class="section">
       <h2>Latest</h2>
       <div id="latest-grid" class="video-grid" aria-live="polite"></div>
