--- a/library.html
+++ b/library.html
@@ -32,7 +32,7 @@
 
   <main class="container">
     <section class="section">
-      <h2>Browse</h2>
+      <h2>Browse Shows</h2>
       <div id="filters" class="filters"></div>
       <div id="library-grid" class="video-grid"></div>
     </section>
