--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     </section>
 
     <section id="latest" class="section">
-      <h2>Latest</h2>
+      <h2>Latest Shows</h2>
       <div id="latest-grid" class="video-grid" aria-live="polite"></div>
     </section>
 
     <section class="section">
-      <h2>All Videos</h2>
+      <h2>All Shows</h2>
       <div id="all-grid" class="video-grid"></div>
     </section>
   </main>
