--- a/index.html
+++ b/index.html
@@ -4,62 +4,77 @@
   <title>Reese’s TV</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#273278" />
+  <meta name="theme-color" content="#0b0e1a" />
   <link rel="icon" href="img/favicon.png" type="image/png" />
   <link rel="apple-touch-icon" href="img/favicon.png" />
   <link rel="preload" href="img/logo-full.png" as="image" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="drive.js"></script>
   <script defer src="app.js"></script>
-
-  <meta name="description" content="Reese’s TV — playful streaming site for Reese’s videos." />
+  <meta name="description" content="Reese’s TV — a sleek, Disney+-style streaming library that auto-indexes your Google Drive shows." />
 </head>
 <body data-page="home">
-  <header class="topbar">
-    <div class="brand">
-      <img src="img/favicon.png" alt="Reese's TV logo" class="brand-icon" />
-      <img src="img/logo-full.png" alt="Reese's TV" class="brand-wordmark" />
-    </div>
-    <div class="search-wrap">
-      <input id="search" type="search" placeholder="Search videos…" autocomplete="off" />
-    </div>
-    <nav class="nav">
-      <a href="./" class="nav-link">Home</a>
-      <a href="browse.html" class="nav-link">Browse</a>
-      <a href="library.html" class="nav-link">Library</a>
-      <a href="about.html" class="nav-link">About</a>
+  <header class="header">
+    <nav class="navbar container">
+      <div class="brand">
+        <img src="img/logo-full.png" alt="Reese’s TV" />
+        <a href="index.html">Home</a>
+        <a href="library.html">Library</a>
+        <a href="browse.html">Browse</a>
+      </div>
+      <div class="nav-spacer"></div>
+      <div class="search">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.35-4.35m1.35-5.65a7 7 0 11-14 0 7 7 0 0114 0z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+        <input id="search" placeholder="Search shows and studios"/>
+      </div>
+      <div class="avatar" title="Profile"></div>
     </nav>
   </header>
 
   <main class="container">
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Welcome to Reese’s TV</h1>
-        <p>Your playful home for videos, series, and shorts.</p>
-        <a class="btn primary" href="#latest">Watch Latest</a>
+    <!-- Hero -->
+    <section class="hero" aria-label="Top Picks">
+      <div id="hero" class="slide">
+        <div class="backdrop"></div>
+        <div class="content">
+          <img id="hero-logo" class="logo" alt="Top pick logo"/>
+          <h1 class="title" id="hero-title">Top Pick</h1>
+          <div class="meta" id="hero-meta">Family • Series</div>
+          <div class="actions">
+            <a class="btn" id="hero-play"><span class="icon">▶</span>Play</a>
+            <a class="btn secondary" id="hero-details">Details</a>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section class="section banner" id="top-picks"></section>
+    <!-- Studios quick filter (chips) -->
+    <div id="studio-chips" class="studio-row" aria-label="Studios"></div>
 
-    <section id="channels" class="section">
-      <h2><span class="dot"></span> Channels</h2>
-      <div id="channel-buttons" class="channels" aria-live="polite"></div>
+    <!-- Carousels -->
+    <section class="section row" aria-label="Latest">
+      <h2>Latest</h2>
+      <div class="controls">
+        <button class="prev" data-target="#row-latest">‹</button>
+        <button class="next" data-target="#row-latest">›</button>
+      </div>
+      <div id="row-latest" class="carousel" role="list"></div>
     </section>
 
-    <section id="latest" class="section">
-      <h2>Latest Shows</h2>
-      <div id="latest-grid" class="video-grid" aria-live="polite"></div>
-    </section>
-
-    <section class="section">
+    <section class="section row" aria-label="All Shows">
       <h2>All Shows</h2>
-      <div id="all-grid" class="video-grid"></div>
+      <div class="controls">
+        <button class="prev" data-target="#row-all">‹</button>
+        <button class="next" data-target="#row-all">›</button>
+      </div>
+      <div id="row-all" class="carousel"></div>
     </section>
-  </main>
-  <footer class="site-footer">
-    <p>© <span id="year"></span> Reese’s TV — Built with ❤️ and GitHub Pages.</p>
-  </footer>
 
+    <div class="footer-gradient"></div>
+  </main>
+
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Reese’s TV.</p>
+  </footer>
 </body>
 </html>
