--- a/show.html
+++ b/show.html
@@ -71,7 +71,7 @@
         </div>
       </div>
     </section>
-  </main>
+  </section></main>
   <footer class="site-footer">
     <p>© <span id="year"></span> Reese’s TV.</p>
   </footer>
