--- a/browse.html
+++ b/browse.html
@@ -30,8 +30,8 @@
   <main class="container">
     <div id="crumbs" class="crumbs"></div>
     <section class="section">
-      <div id="folders" class="logo-grid"></div>
-      <div id="videos" class="video-grid"></div>
+      <div id="row-all" class="carousel"></div>
+      
     </section>
   </main>
   <footer class="site-footer">
