--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     </nav>
   </header>
 
-  <main class="container">
-    <!-- Hero -->
+  <main>
     <section class="hero" aria-label="Top Picks">
       <div id="hero" class="slide">
         <div class="backdrop"></div>
@@ -48,29 +47,29 @@
       </div>
     </section>
 
-    <!-- Studios quick filter (chips) -->
-    <div id="studio-chips" class="studio-row" aria-label="Studios"></div>
+    <div class="container">
+      <div id="studio-chips" class="studio-row" aria-label="Studios"></div>
 
-    <!-- Carousels -->
-    <section class="section row" aria-label="Latest">
-      <h2>Latest</h2>
-      <div class="controls">
-        <button class="prev" data-target="#row-latest">‹</button>
-        <button class="next" data-target="#row-latest">›</button>
-      </div>
-      <div id="row-latest" class="carousel" role="list"></div>
-    </section>
+      <section class="section row" aria-label="Latest">
+        <h2>Latest</h2>
+        <div class="controls">
+          <button class="prev" data-target="#row-latest">‹</button>
+          <button class="next" data-target="#row-latest">›</button>
+        </div>
+        <div id="row-latest" class="carousel" role="list"></div>
+      </section>
 
-    <section class="section row" aria-label="All Shows">
-      <h2>All Shows</h2>
-      <div class="controls">
-        <button class="prev" data-target="#row-all">‹</button>
-        <button class="next" data-target="#row-all">›</button>
-      </div>
-      <div id="row-all" class="carousel"></div>
-    </section>
+      <section class="section row" aria-label="All Shows">
+        <h2>All Shows</h2>
+        <div class="controls">
+          <button class="prev" data-target="#row-all">‹</button>
+          <button class="next" data-target="#row-all">›</button>
+        </div>
+        <div id="row-all" class="carousel"></div>
+      </section>
 
-    <div class="footer-gradient"></div>
+      <div class="footer-gradient"></div>
+    </div>
   </main>
 
   <footer class="site-footer">
