--- a/404.html
+++ b/404.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="refresh" content="0; url=/" />
-  <title>404 — Reese’s TV</title>
-  <link rel="icon" href="img/favicon.png" />
-  <style>body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:#0e1333;color:#e7edff;display:grid;place-items:center;min-height:100vh;margin:0}</style>
-</head>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>404 — Reese’s TV</title><link rel="icon" href="img/favicon.png"/>
+<link rel="stylesheet" href="styles.css" /></head>
 <body>
-  <p>Not found. Taking you home…</p>
-</body>
-</html>
+  
+  <header class="topbar">
+    <a class="brand" href="/">
+      <img class="brand-icon" src="img/favicon.png" alt="logo">
+      <img class="brand-wordmark" src="img/logo-full.png" alt="Reese's TV">
+    </a>
+    <nav class="nav">
+      <a href="index.html" >Home</a>
+      <a href="browse.html" >Browse</a>
+      <a href="library.html" >Library</a>
+      <a href="about.html" >About</a>
+    </nav>
+    <div class="spacer"></div>
+    <div class="search"><input id="q" type="search" placeholder="Search shows…"></div>
+  </header>
+
+  <main class="container"><h1 class="h1">Not found</h1><p class="sub">We couldn't find that page. Try Home.</p></main>
+  <footer class="footer container">Made with ❤️ for Reese’s TV</footer>
+</body></html>
