--- a/about.html
+++ b/about.html
@@ -1,49 +1,44 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>About — Reese’s TV</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#273278" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>About — Reese’s TV</title>
+  <meta name="theme-color" content="#0b0e1a" />
   <link rel="icon" href="img/favicon.png" type="image/png" />
   <link rel="apple-touch-icon" href="img/favicon.png" />
-  <link rel="preload" href="img/logo-full.png" as="image" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="drive.js"></script>
   <script defer src="app.js"></script>
-
 </head>
 <body data-page="about">
+
   <header class="topbar">
-    <div class="brand">
-      <img src="img/favicon.png" alt="Reese's TV logo" class="brand-icon" />
-      <img src="img/logo-full.png" alt="Reese's TV" class="brand-wordmark" />
-    </div>
-    <div class="search-wrap">
-      <input id="search" type="search" placeholder="Search videos…" autocomplete="off" />
-    </div>
+    <a class="brand" href="/">
+      <img class="brand-icon" src="img/favicon.png" alt="logo">
+      <img class="brand-wordmark" src="img/logo-full.png" alt="Reese's TV">
+    </a>
     <nav class="nav">
-      <a href="./" class="nav-link">Home</a>
-      <a href="browse.html" class="nav-link">Browse</a>
-      <a href="library.html" class="nav-link">Library</a>
-      <a href="about.html" class="nav-link">About</a>
+      <a href="index.html" >Home</a>
+      <a href="browse.html" >Browse</a>
+      <a href="library.html" >Library</a>
+      <a href="about.html" aria-current="page">About</a>
     </nav>
+    <div class="spacer"></div>
+    <div class="search"><input id="q" type="search" placeholder="Search shows…"></div>
   </header>
 
-  <main class="container prose">
-    <h1>About Reese’s TV</h1>
-    <p>Reese’s TV is a lightweight, static streaming site hosted on GitHub Pages. Videos are embedded from Google Drive.</p>
-    <h2>How it works</h2>
-    <ol>
-      <li>Drop your video metadata into <code>videos.json</code>.</li>
-      <li>Each entry uses the Google Drive file ID for embedding.</li>
-      <li>GitHub Pages hosts this site—no backend required.</li>
-    </ol>
-    <p>Made to match the playful Reese’s branding 💙</p>
-  </main>
-  <footer class="site-footer">
-    <p>© <span id="year"></span> Reese’s TV — Built with ❤️ and GitHub Pages.</p>
-  </footer>
+  <main class="container">
 
+  <h1 class="h1">About</h1>
+  <p class="sub">This private site indexes shows from Google Drive folders you specify in <code>config.json</code>.</p>
+  <ul>
+    <li>Shows live inside <strong>Studio</strong> folders (top level).</li>
+    <li>Each <strong>Show</strong> can have <strong>Season</strong> subfolders named like <em>Season 1</em>, <em>season 2</em>, etc.</li>
+    <li>Put a <code>logo.png</code> (or <code>logo.jpg</code>) file in a show folder for artwork.</li>
+  </ul>
+
+  </main>
+<footer class="footer container">Made with ❤️ for Reese’s TV</footer>
 </body>
 </html>
