--- a/index.html
+++ b/index.html
@@ -1,48 +1,79 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Reese’s TV</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Home — Reese’s TV</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b0e1a" />
   <link rel="icon" href="img/favicon.png" type="image/png" />
   <link rel="apple-touch-icon" href="img/favicon.png" />
+  <link rel="preload" href="img/logo-full.png" as="image" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="drive.js"></script>
   <script defer src="app.js"></script>
+  <meta name="description" content="Reese’s TV — a sleek, Disney+-style streaming library that auto-indexes your Google Drive shows." />
 </head>
 <body data-page="home">
-
-  <header class="topbar">
-    <a class="brand" href="/">
-      <img class="brand-icon" src="img/favicon.png" alt="logo">
-      <img class="brand-wordmark" src="img/logo-full.png" alt="Reese's TV">
-    </a>
-    <nav class="nav">
-      <a href="index.html" aria-current="page">Home</a>
-      <a href="browse.html" >Browse</a>
-      <a href="library.html" >Library</a>
-      <a href="about.html" >About</a>
+  <header class="header">
+    <nav class="navbar container">
+      <div class="brand">
+        <img src="img/logo-full.png" alt="Reese’s TV" />
+        <a href="index.html">Home</a>
+        <a href="library.html">Library</a>
+        <a href="browse.html">Browse</a>
+      </div>
+      <div class="nav-spacer"></div>
+      <div class="search">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.35-4.35m1.35-5.65a7 7 0 11-14 0 7 7 0 0114 0z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+        <input id="search" placeholder="Search shows and studios"/>
+      </div>
+      <div class="avatar" title="Profile"></div>
     </nav>
-    <div class="spacer"></div>
-    <div class="search"><input id="q" type="search" placeholder="Search shows…"></div>
   </header>
 
-  <main class="container">
+  <main>
+    <section class="hero" aria-label="Top Picks">
+      <div id="hero" class="slide">
+        <div class="backdrop"></div>
+        <div class="content">
+          <img id="hero-logo" class="logo" alt="Top pick logo"/>
+          <h1 class="title" id="hero-title">Top Pick</h1>
+          <div class="meta" id="hero-meta">Family • Series</div>
+          <div class="actions">
+            <a class="btn" id="hero-play"><span class="icon">▶</span>Play</a>
+            <a class="btn secondary" id="hero-details">Details</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <h1 class="h1">Top Picks</h1>
-  <div id="row-top" class="carousel"></div>
+    <div class="container">
+      <div id="studio-chips" class="studio-row" aria-label="Studios"></div>
 
-  <div class="row" style="margin-top:1rem">
-    <h2 class="h1" style="margin:0">Studios</h2>
-  </div>
-  <div id="studios" class="carousel"></div>
+      <section class="section row" aria-label="Latest">
+        <h2>Latest</h2>
+        <div class="controls">
+          <button class="prev" data-target="#row-latest">‹</button>
+          <button class="next" data-target="#row-latest">›</button>
+        </div>
+        <div id="row-latest" class="carousel" role="list"></div>
+      </section>
 
-  <h2 class="h1">Latest Shows</h2>
-  <p class="sub">Recently added or updated from your Google Drive.</p>
-  <div id="row-latest" class="carousel"></div>
+      <section class="section row" aria-label="All Shows">
+        <h2>All Shows</h2>
+        <div class="controls">
+          <button class="prev" data-target="#row-all">‹</button>
+          <button class="next" data-target="#row-all">›</button>
+        </div>
+        <div id="row-all" class="carousel"></div>
+      </section>
 
+      <div class="footer-gradient"></div>
+    </div>
   </main>
-<footer class="footer container">Made with ❤️ for Reese’s TV</footer>
+
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Reese’s TV.</p>
+  </footer>
 </body>
 </html>
