--- a/show.html
+++ b/show.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script defer src="drive.js"></script>
   <script defer src="app.js"></script>
+  <link rel="stylesheet" href="show.page.css?v=8">
 </head>
 <body data-page="show">
   <header class="topbar">
