--- a/index.html
+++ b/index.html
@@ -14,66 +14,20 @@
   <meta name="description" content="Reese’s TV — a sleek, Disney+-style streaming library that auto-indexes your Google Drive shows." />
 </head>
 <body data-page="home">
-  <header class="header">
-    <nav class="navbar container">
-      <div class="brand">
-        <img src="img/logo-full.png" alt="Reese’s TV" />
-        <a href="index.html">Home</a>
-        <a href="library.html">Library</a>
-        <a href="browse.html">Browse</a>
-      </div>
-      <div class="nav-spacer"></div>
-      <div class="search">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.35-4.35m1.35-5.65a7 7 0 11-14 0 7 7 0 0114 0z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-        <input id="search" placeholder="Search shows and studios"/>
-      </div>
-      <div class="avatar" title="Profile"></div>
-    </nav>
+  <header class="topbar">
+    <a class="brand" href="index.html"><img src="img/logo-full.png" alt="Logo" height="28"/></a>
+    <nav class="nav"><a href="browse.html">Browse</a><a href="library.html">Library</a></nav>
+    <div style="margin-left:auto"></div>
   </header>
-
-  <main>
-    <section class="hero" aria-label="Top Picks">
-      <div id="hero" class="slide">
-        <div class="backdrop"></div>
-        <div class="content">
-          <img id="hero-logo" class="logo" alt="Top pick logo"/>
-          <h1 class="title" id="hero-title">Top Pick</h1>
-          <div class="meta" id="hero-meta">Family • Series</div>
-          <div class="actions">
-            <a class="btn" id="hero-play"><span class="icon">▶</span>Play</a>
-            <a class="btn secondary" id="hero-details">Details</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="container">
-      <div id="studio-chips" class="studio-row" aria-label="Studios"></div>
-
-      <section class="section row" aria-label="Latest">
-        <h2>Latest</h2>
-        <div class="controls">
-          <button class="prev" data-target="#row-latest">‹</button>
-          <button class="next" data-target="#row-latest">›</button>
-        </div>
-        <div id="row-latest" class="carousel" role="list"></div>
-      </section>
-
-      <section class="section row" aria-label="All Shows">
-        <h2>All Shows</h2>
-        <div class="controls">
-          <button class="prev" data-target="#row-all">‹</button>
-          <button class="next" data-target="#row-all">›</button>
-        </div>
-        <div id="row-all" class="carousel"></div>
-      </section>
-
-      <div class="footer-gradient"></div>
-    </div>
+  <main id="home-root">
+    <section id="home-hero" class="hero"><div class="content"><h1 class="title">Loading…</h1></div></section>
+    <section class="row">Top Picks</section>
+    <div id="row-top" class="scroller"></div>
+    <section class="row">Trending</section>
+    <div id="row-trend" class="scroller"></div>
+    <section class="row">Because you watched</section>
+    <div id="row-because" class="scroller"></div>
   </main>
-
-  <footer class="site-footer">
-    <p>© <span id="year"></span> Reese’s TV.</p>
-  </footer>
+  <script src="app.js"></script>
 </body>
 </html>
