--- a/_old/browse.html
+++ b/_old/browse.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Browse — Reese’s TV</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="refresh" content="0; url=/" />
-  <title>404 — Reese’s TV</title>
-  <link rel="icon" href="img/favicon.png" />
-  <style>body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:#0e1333;color:#e7edff;display:grid;place-items:center;min-height:100vh;margin:0}</style>
+  <meta name="theme-color" content="#273278" />
+  <link rel="icon" href="img/favicon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="img/favicon.png" />
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="app.js"></script>
 <link rel="stylesheet" href="streaming-theme.css">
 </head>
 \1
@@ -43,6 +45,16 @@
   </div>
 </div>
 
-  <p>Not found. Taking you home…</p>
+  
+  <main class="container">
+    <div id="crumbs" class="crumbs"></div>
+    <section class="section">
+      <div id="row-all" class="carousel"></div>
+      
+    </section>
+  </main>
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Reese’s TV.</p>
+  </footer>
 </body>
 </html>
