--- a/_old/library.html
+++ b/_old/library.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Library — Reese’s TV</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="refresh" content="0; url=/" />
-  <title>404 — Reese’s TV</title>
-  <link rel="icon" href="img/favicon.png" />
-  <style>body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:#0e1333;color:#e7edff;display:grid;place-items:center;min-height:100vh;margin:0}</style>
+  <meta name="theme-color" content="#273278" />
+  <link rel="icon" href="img/favicon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="img/favicon.png" />
+  <link rel="preload" href="img/logo-full.png" as="image" />
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="app.js"></script>
+
 <link rel="stylesheet" href="streaming-theme.css">
 </head>
 \1
@@ -43,6 +47,18 @@
   </div>
 </div>
 
-  <p>Not found. Taking you home…</p>
+  
+
+  <main class="container">
+    <section class="section">
+      <h2>Browse Shows</h2>
+      <div id="filters" class="filters"></div>
+      <div id="library-grid" class="video-grid"></div>
+    </section>
+  </main>
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Reese’s TV — Built with ❤️ and GitHub Pages.</p>
+  </footer>
+
 </body>
 </html>
