--- a/index.html
+++ b/index.html
@@ -12,13 +12,43 @@
   <script defer src="app.js"></script>
   <meta name="description" content="Reese’s TV — a sleek, Disney+-style streaming library that auto-indexes your Google Drive shows." />
   <script src="https://accounts.google.com/gsi/client" async defer></script>
+<link rel="stylesheet" href="streaming-theme.css">
 </head>
-<body data-page="home">
-  <header class="topbar">
-    <a class="brand" href="index.html"><img src="img/logo-full.png" alt="Logo" height="28"/></a>
-    <nav class="nav"><a href="browse.html">Browse</a><a href="library.html">Library</a></nav>
-    <div style="margin-left:auto"></div>
-  </header>
+\1
+
+<!-- Unified Top Bar -->
+<div class="topbar">
+  <div class="brand">
+    <img src="/img/logo-full.png" alt="Logo" />
+  </div>
+  <nav style="display:flex;gap:12px;margin-left:16px;align-items:center">
+    <a href="/" class="btn">Home</a>
+    <a href="/shows" class="btn">Shows</a>
+    <a href="/movies" class="btn">Movies</a>
+    <a href="/mylist" class="btn">My List</a>
+  </nav>
+  <div class="top-actions">
+    <input placeholder="Search" aria-label="Search" style="padding:8px 10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:var(--muted)">
+  </div>
+</div>
+
+
+<!-- Topbar injected by ChatGPT -->
+
+  <nav style="display:flex;gap:12px;margin-left:16px;align-items:center">
+    <a href="/" class="btn">Home</a>
+    <a href="/shows" class="btn">Shows</a>
+    <a href="/movies" class="btn">Movies</a>
+    <a href="/mylist" class="btn">My List</a>
+  </nav>
+  <div class="top-actions">
+    <input placeholder="Search" style="padding:8px 10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:var(--muted)">
+    <button class="btn">Kids</button>
+    <button class="btn">Sign In</button>
+  </div>
+</div>
+
+  
   <main id="home-root">
     <section id="home-hero" class="hero"><div class="content"><h1 class="title">Loading…</h1></div></section>
     <section class="row">Top Picks</section>
