--- a/watch.html
+++ b/watch.html
@@ -12,23 +12,69 @@
   <script defer src="app.js"></script>
 
   <meta name="description" content="Watch Reese’s TV video." />
+<link rel="stylesheet" href="streaming-theme.css">
+
+<style>
+/* player-fullscreen */
+html, body { height:100%; margin:0; }
+.player-wrap { position:relative; width:100%; height:100vh; background:black; }
+.player-wrap video { width:100%; height:100%; object-fit:contain; background:black; }
+.player-controls { position:absolute; left:0; right:0; bottom:0; display:flex; gap:8px; padding:10px; justify-content:flex-end; background:linear-gradient(180deg, transparent, rgba(0,0,0,0.6)); }
+.player-btn { background:rgba(255,255,255,0.12); border:0; padding:8px 12px; border-radius:8px; color:#fff; cursor:pointer; }
+</style>
+<script>
+// fullscreen toggle
+document.addEventListener('DOMContentLoaded', function(){
+  const v = document.querySelector('.player-wrap video');
+  const fsBtn = document.querySelector('#fsBtn');
+  if(fsBtn && v){
+    fsBtn.addEventListener('click', () => {
+      const el = v.closest('.player-wrap');
+      if (!document.fullscreenElement) {
+        (el.requestFullscreen && el.requestFullscreen()) || (el.webkitRequestFullscreen && el.webkitRequestFullscreen());
+      } else {
+        (document.exitFullscreen && document.exitFullscreen()) || (document.webkitExitFullscreen && document.webkitExitFullscreen());
+      }
+    });
+  }
+});
+</script>
 </head>
-<body data-page="watch">
-  <header class="topbar">
-    <div class="brand">
-      <img src="img/favicon.png" alt="Reese's TV logo" class="brand-icon" />
-      <img src="img/logo-full.png" alt="Reese's TV" class="brand-wordmark" />
-    </div>
-    <div class="search-wrap">
-      <input id="search" type="search" placeholder="Search videos…" autocomplete="off" />
-    </div>
-    <nav class="nav">
-      <a href="./" class="nav-link">Home</a>
-      <a href="browse.html" class="nav-link">Browse</a>
-      <a href="library.html" class="nav-link">Library</a>
-      <a href="about.html" class="nav-link">About</a>
-    </nav>
-  </header>
+\1
+
+<!-- Unified Top Bar -->
+<div class="topbar">
+  <div class="brand">
+    <img src="/img/logo-full.png" alt="Logo" />
+  </div>
+  <nav style="display:flex;gap:12px;margin-left:16px;align-items:center">
+    <a href="/" class="btn">Home</a>
+    <a href="/shows" class="btn">Shows</a>
+    <a href="/movies" class="btn">Movies</a>
+    <a href="/mylist" class="btn">My List</a>
+  </nav>
+  <div class="top-actions">
+    <input placeholder="Search" aria-label="Search" style="padding:8px 10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:var(--muted)">
+  </div>
+</div>
+
+
+<!-- Topbar injected by ChatGPT -->
+
+  <nav style="display:flex;gap:12px;margin-left:16px;align-items:center">
+    <a href="/" class="btn">Home</a>
+    <a href="/shows" class="btn">Shows</a>
+    <a href="/movies" class="btn">Movies</a>
+    <a href="/mylist" class="btn">My List</a>
+  </nav>
+  <div class="top-actions">
+    <input placeholder="Search" style="padding:8px 10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:var(--muted)">
+    <button class="btn">Kids</button>
+    <button class="btn">Sign In</button>
+  </div>
+</div>
+
+  
 
   <main class="watch container">
     <div class="player-wrap">
