--- a/404.html
+++ b/404.html
@@ -44,5 +44,7 @@
 </div>
 
   <p>Not found. Taking you home…</p>
+
+<footer class="footer"><small>Made with ❤️ for Reese’s TV</small></footer>
 </body>
 </html>
