--- a/_old/about.html
+++ b/_old/about.html
@@ -65,5 +65,7 @@
     <p>© <span id="year"></span> Reese’s TV — Built with ❤️ and GitHub Pages.</p>
   </footer>
 
+
+<footer class="footer"><small>Made with ❤️ for Reese’s TV</small></footer>
 </body>
 </html>
