--- a/_old/browse.html
+++ b/_old/browse.html
@@ -56,5 +56,7 @@
   <footer class="site-footer">
     <p>© <span id="year"></span> Reese’s TV.</p>
   </footer>
+
+<footer class="footer"><small>Made with ❤️ for Reese’s TV</small></footer>
 </body>
 </html>
