--- a/watch.html
+++ b/watch.html
@@ -99,5 +99,7 @@ document.addEventListener('DOMContentLoaded', function(){
     <p>© <span id="year"></span> Reese’s TV — Built with ❤️ and GitHub Pages.</p>
   </footer>
 
+
+<footer class="footer"><small>Made with ❤️ for Reese’s TV</small></footer>
 </body>
 </html>
